--- a/Geeetech A10M.cfg
+++ b/Geeetech A10M.cfg
@@ -17,12 +17,12 @@ baud: 250000
 
 [printer]
 kinematics: cartesian
-max_velocity: 250
-max_accel: 1500
-max_accel_to_decel: 1250
-max_z_velocity: 10
-max_z_accel: 120
-square_corner_velocity: 6.0
+max_velocity: 220
+max_accel: 1000
+max_accel_to_decel: 1100
+max_z_velocity: 8
+max_z_accel: 110
+square_corner_velocity: 2.0
 
 [stepper_x]
 step_pin: PC0
@@ -34,7 +34,9 @@ endstop_pin: ^!PA2
 position_min: -10
 position_endstop: -10
 position_max: 230
-homing_speed: 35
+homing_speed: 80
+second_homing_speed: 30
+homing_retract_dist: 5
 
 [stepper_y]
 step_pin: PC6
@@ -46,7 +48,9 @@ endstop_pin: ^!PA6
 position_min: -5
 position_endstop: -5
 position_max: 223
-homing_speed: 35
+homing_speed: 70
+second_homing_speed: 30
+homing_retract_dist: 5
 
 [stepper_z]
 step_pin: PA3
@@ -57,7 +61,9 @@ rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_max: 240
 position_min: -5
-homing_speed: 3
+homing_speed: 8
+second_homing_speed: 4
+homing_retract_dist: 4
 
 [extruder]
 step_pin: PL3
@@ -115,18 +121,20 @@ pid_Kd: 590.784
 [bltouch]
 sensor_pin: ^PC7
 control_pin: PB5
-#pin_move_time: 1.5
+pin_move_time: 0.680
 pin_up_reports_not_triggered: False
 pin_up_touch_mode_reports_triggered: False
 probe_with_touch_mode: False
+stow_on_each_sample: True
 x_offset: -44
 y_offset: -3
 z_offset: 1.27
 speed: 2
 #lift_speed: 1.0
 samples: 2
-sample_retract_dist: 8
-SAMPLES_TOLERANCE: 0.4
+sample_retract_dist: 7
+samples_tolerance: 0.4
+samples_tolerance_retries: 2
 
 [bed_mesh]
 speed: 35
@@ -143,9 +151,9 @@ screw4: 30,200
 
 [safe_z_home]
 home_xy_position: 159,119
-speed: 35
-z_hop: 20
-#z_hop_speed: 3
+speed: 50
+z_hop: 8
+z_hop_speed: 5
 
 [fan]
 pin: PH6
@@ -163,6 +171,7 @@ d6_pin: PE3
 d7_pin: PC1
 encoder_pins: ^PL7, ^PG1
 click_pin: ^!PD2
+menu_timeout: 60
 
 [temperature_sensor raspberry_pi]
 sensor_type: temperature_host
@@ -176,16 +185,16 @@ enable_force_move: True
 default_type: command
 
 [firmware_retraction]
-retract_length: 6.8
+retract_length: 7
 #   The length of filament (in mm) to retract when G10 is activated,
 #   and to unretract when G11 is activated (but see
 #   unretract_extra_length below). The default is 0 mm.
-retract_speed: 30
+retract_speed: 35
 #   The speed of retraction, in mm/s. The default is 20 mm/s.
 unretract_extra_length: 0
 #   The length (in mm) of *additional* filament to add when
 #   unretracting.
-unretract_speed: 25
+unretract_speed: 30
 #   The speed of unretraction, in mm/s. The default is 10 mm/s.
 
 [gcode_arcs]
@@ -216,7 +225,7 @@ gcode:
     SAVE_GCODE_STATE NAME=M0_state
     PAUSE
     G91
-    G1 E-6.8 F2700
+    G1 E-7 F3000
     G1 Z{Z}
     G90
     G1 X{X} Y{Y} F3000
@@ -230,6 +239,7 @@ gcode:
     {% set EXTRUDER = params.EXTRUDER|default(205)|float %}
     {% set BED = params.BED|default(55)|float %}
     #{% set CHAMBER = params.CHAMBER|default(30)|float %}
+    BLTOUCH_DEBUG COMMAND=reset
     G90 # use absolute coordinates
     M83 # extruder relative mode
     M104 S160 # temporary
@@ -239,20 +249,26 @@ gcode:
     G28 # Home all axes    
     BED_MESH_PROFILE LOAD=default 
     G1 Z50 F240
-    G1 X-9.4 Y150 F3000  
-    M106 S100 ;cool
+    G1 X-9 Y150 F3000  
+    M106 S150 ;cool
     M109 S{EXTRUDER} # wait for nozzle temp to stabilize 
-    G1 X2 Y150 F5000
+    G1 X3 Y150 F5000
     G1 X-9 Y150 F5000
-    G1 Z0.2 F800  
-    G92 E0 # Reset Extruder
+    G1 Z0.3 F1800  
     M106 S0 ;off cool
-    G1 X2 Y5 Z0.15 F2000 # Move to start position
-    G4 P250 #wait 0.25s
-    G1 X200 Y5 Z0.35 F280 E28 #; Draw the first line
     G92 E0 # Reset Extruder
-    G1 Z0.33 F2600 # Move Z Axis up little to prevent scratching of Heat Bed
-    G4 P25 #pause
+    
+    G1 E8 F2000 ; AntiRetract
+    G1 X2 Y5 Z0.25 F2000 # Move to start position
+    G4 P250 #wait 0.25s
+    G1 X200 Y5 Z0.35 F800 E40 #; Draw the first line
+    G1 X200 Y5.8 Z0.35 F2000  #;  line
+    G1 X20 Y5.8 Z0.28 F900 E30 #; Draw the sec line
+    G92 E0 # Reset Extruder
+    G1 E-1 F500 ; Retract filiment by 1 mm
+    G1 Z0.33 F2000 # Move Z Axis up little to prevent scratching of Heat Bed
+    M221 S95
+
 # ================================================================================
 # GCode Macro: END_PRINT
 # Add END_PRINT in your slicers ending script
@@ -264,13 +280,13 @@ gcode =
     G10 ; retract
     G91 ; Relative Positioning
     G1 Z+20 ; Move Z up so it doesn't hit anything
-    M106 S100 ;cool
-    G1 E-5 F3200 ; Retract-4
-    G1 E-10 F1200 ; Retract-10
+    M106 S255 ;cool
+    G1 E-4 F3200 ; Retract-4
+    G1 E-8 F1200 ; Retract-8
     G90 ; Absolute Positioning
-    G1 X-9.7 Y205 F4500 ; Move to front
+    G1 X-9.7 Y205 F4000 ; Move to front
     G4
-    G1 X4 Y205 F2500 ; Move back 
+    G1 X4 Y205 F2000 ; Move back 
     G4
     G1 X-8.5 Y205 F3000 ; Move to front
     M104 S0 ; Turn off Extrude (set it to 0)
@@ -287,6 +303,7 @@ gcode:
   {% elif printer.toolhead.homed_axes != "xyz" %}
     {action_respond_info("Please home XYZ first")}
   {% else %}
+    BLTOUCH_DEBUG COMMAND=reset
     SAVE_GCODE_STATE NAME=G29_state
     G90
     G1 Z10 F240
@@ -381,11 +398,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.242500, -0.143750, -0.025000, -0.055000, -0.237500
-#*# 	-0.205000, -0.240000, -0.080000, -0.121250, -0.260000
-#*# 	-0.250000, -0.056250, -0.015000, -0.138750, -0.137500
-#*# 	-0.126250, -0.136250, -0.053750, 0.108750, -0.107500
-#*# 	-0.003750, 0.003750, 0.016250, 0.018750, -0.160000
+#*# 	  -0.157500, -0.076250, -0.111250, -0.171250, -0.218750
+#*# 	  -0.220000, -0.095000, -0.016250, 0.056250, -0.066250
+#*# 	  -0.207500, 0.005000, -0.015000, -0.050000, -0.142500
+#*# 	  -0.118750, -0.021250, 0.078750, 0.095000, 0.013750
+#*# 	  -0.026250, 0.108750, 0.107500, 0.042500, 0.082500
 #*# tension = 0.2
 #*# min_x = 44.0
 #*# algo = lagrange
@@ -393,6 +410,6 @@ gcode:
 #*# mesh_y_pps = 2
 #*# min_y = 20.0
 #*# x_count = 5
-#*# max_y = 210.0
+#*# max_y = 200.0
 #*# mesh_x_pps = 2
-#*# max_x = 184.0
+#*# max_x = 182.99
