--- a/printer.cfg
+++ b/printer.cfg
@@ -1,18 +1,45 @@
 # This file contains pin mappings and reasonable defaults for Prusa i3 MK3
+#[include fluidd.cfg]
+#[include mainsail.cfg]
+#[include kiauh_macros.cfg]
+#[include display_menu.cfg]
+#[include shell_cmd.cfg]
+[include webui_macros.cfg]
+[include macros.cfg]
 
 [probe]
 pin: PB4
 x_offset: 23
 y_offset: 5
-z_offset: 0.487
-speed: 8
+z_offset: 0.478
+speed: 7
 samples: 3
 samples_result: average
-sample_retract_dist: 1.0
+sample_retract_dist: 2.2
+
+[bed_screws]
+screw1: 13,6
+screw1_name: Front Left
+screw2: 13,115
+screw1_name: Front Center
+screw3: 13,210
+screw3_name: Front Right
+
+screw4: 123,6
+screw1_name: Center Left
+screw5: 123,210
+screw3_name: Center Right
+
+screw6: 228,6
+screw3_name: Back Left
+screw7: 228,115
+screw1_name: Back Center
+screw8: 228,210
+screw3_name: Back Right
 
 [bed_mesh]
 speed: 110
-horizontal_move_z: 2
+horizontal_move_z: 2.5
 mesh_min: 24, 6
 mesh_max: 228,210
 probe_count: 5,5
@@ -31,42 +58,23 @@ gcode:
     M117 Homing the toolhead
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.149155 HOLDCURRENT=0.281738
     SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.182301 HOLDCURRENT=0.3480291
-
     G28 X0 Y0
     M400
-
     G1 X101 Y100 F7200
     G28 Z0
     M400
-
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2130 stepper_x"].run_current} HOLDCURRENT={printer.configfile.config["tmc2130 stepper_x"].hold_current}
     SET_TMC_CURRENT STEPPER=stepper_y CURRENT={printer.configfile.config["tmc2130 stepper_y"].run_current} HOLDCURRENT={printer.configfile.config["tmc2130 stepper_y"].hold_current}
-
     # Reset LCD
     M117
-
-    # Safe Z
-    G1 Z20 F7200
-
+    # Park
+    G1 X1 Y0 Z80 F7200
     # Restore acceleration
     M204 S{printer.configfile.config.printer.max_accel}
 axes: Z
 set_position_x: 0
 set_position_y: 0
 set_position_z: 0
-
-
-[gcode_macro G80]
-gcode:
-# G28 #Avoid double homing if using PrusaSlicer or other default gcode.
- BED_MESH_CALIBRATE
- G1 X0 Y0 Z0.4 F4000
- M117
- M400
- 
-[gcode_macro G81]
-gcode:
- BED_MESH_OUTPUT
 
 [stepper_x]
 step_pin: PC0
@@ -88,7 +96,7 @@ homing_retract_dist: 0
 [tmc2130 stepper_x]
 cs_pin: PG0
 #microsteps: 16
-interpolate: True
+#interpolate: True
 run_current: .281738
 hold_current: .281738
 sense_resistor: 0.220
@@ -157,7 +165,7 @@ rotation_distance: 8
 #step_distance: .0025
 endstop_pin: probe:z_virtual_endstop
 #Please update the Z height in the Tram_Z macro below.
-position_max: 210 #This is the MK3S default.
+position_max: 210.4 #This is the MK3S default.
 #position_max: 210 #Use this for a stock MK3 non-S, BMG, or Bear extruders for the MK3S.
 position_min: -3
 homing_speed: 10 #13.333
@@ -165,7 +173,7 @@ homing_speed: 10 #13.333
 [tmc2130 stepper_z]
 cs_pin: PK5
 #microsteps: 16
-interpolate: True
+#interpolate: True
 run_current: .53033
 hold_current: .53033
 sense_resistor: 0.220
@@ -198,19 +206,23 @@ filament_diameter: 1.750
 # poorly sliced objects that extrude too much for small moves.
 max_extrude_cross_section: 50.0
 # Allows to load filament and purge up to 500mm
-max_extrude_only_distance: 500.0
+max_extrude_only_distance: 990.0
 max_extrude_only_velocity: 120.0
-max_extrude_only_accel: 1250.0
+max_extrude_only_accel: 1350.0
 heater_pin: PE5
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: PF0
-control: pid
-pid_Kp: 16.13
-pid_Ki: 1.1625
-pid_Kd: 56.23
+#control: pid
+#pid_Kp: 16.13
+#pid_Ki: 1.1625
+#pid_Kd: 56.23
+control = pid
+pid_kp = 22.718
+pid_ki = 1.082
+pid_kd = 119.271
 min_temp: 0
 max_temp: 305
-pressure_advance: 0.047
+pressure_advance: 0.048
 pressure_advance_smooth_time: 0.040
 
 [tmc2130 extruder]
@@ -235,6 +247,9 @@ driver_SGT: 3
 
 [firmware_retraction]
 retract_length: 0.8
+retract_speed: 35
+unretract_extra_length: 0
+unretract_speed: 35
 
 [heater_bed]
 heater_pin: PG5
@@ -259,6 +274,7 @@ pin: PH3
 
 [mcu]
 #serial: /dev/ttyACM0 #Default to USB.
+#serial: /dev/serial0  # If you are using internal RPI serial port
 serial: /dev/ttyAMA0
 restart_method: command
 #serial: /dev/ttyS0
@@ -279,12 +295,18 @@ default_type: command
 
 [printer]
 kinematics: cartesian
-max_velocity: 300
-max_accel: 2000
-max_accel_to_decel: 2000
-max_z_velocity: 20
-max_z_accel: 300
-SQUARE_CORNER_VELOCITY: 5
+max_velocity: 250
+max_accel: 1250
+max_accel_to_decel: 1250
+max_z_velocity: 12
+max_z_accel: 240
+square_corner_velocity: 1.5
+## For faster printing enable
+# [printer]
+# max_accel: 2000
+# max_accel_to_decel: 2000
+# max_z_velocity: 20
+# max_z_accel: 300
 
 [gcode_arcs]
 resolution: 0.25
@@ -305,7 +327,7 @@ insert_gcode:
     LOAD_FILAMENT
 event_delay: 3.0
 pause_delay: 0.01
-switch_pin: !PK0
+switch_pin: PK0
 #MK3 (non-S) Filament Sensor.
 #[pat9125 fsensor]
 #invert_axis: True
@@ -317,7 +339,6 @@ default_type: command
 [force_move]
 enable_force_move: True
 
-[pause_resume]
 
 # Keeps Debug LED off / not floating
 [static_digital_output debug_led]
@@ -331,225 +352,47 @@ shutdown_value:0
 cycle_time: 0.001
 scale: 1000
 
-######################################################################
-# Beeper
-######################################################################
-
-# M300 : Play tone. Beeper support, as commonly found on usual LCD
-# displays (i.e. RepRapDiscount 2004 Smart Controller, RepRapDiscount
-# 12864 Full Graphic). This defines a custom I/O pin and a custom
-# GCODE macro.  Usage:
-#   M300 [P<ms>] [S<Hz>]
-#   P is the tone duration, S the tone frequency.
-# The frequency won't be pitch perfect.
-
-
-
-[gcode_macro M300]
-gcode:
-    # Use a default 1kHz tone if S is omitted.
-    {% set S = params.S|default(1000)|int %}
-    # Use a 10ms duration is P is omitted.
-    {% set P = params.P|default(100)|int %}
-    SET_PIN PIN=BEEPER_pin VALUE=0.5 CYCLE_TIME={ 1.0/S if S > 0 else 1 }
-    G4 P{P}
-    SET_PIN PIN=BEEPER_pin VALUE=0
-
-
-[pause_resume]
-
-# Color Change
-[gcode_macro M600]
-gcode:
-  PAUSE
-  UNLOAD_FILAMENT
-  M117 Please load new filament and resume
-  
-#Load and Unload Macros.
-[gcode_macro UNLOAD_FILAMENT]
-gcode:
-  SAVE_GCODE_STATE NAME=unload_state
-  G91
-  {% if params.TEMP is defined or printer.extruder.can_extrude|lower == 'false' %}
-    M117 Heating...
-    # Heat up hotend to provided temp or 220 as default as that should work OK with most filaments.
-    M109 S{params.TEMP|default(220, true)}
-  {% endif %}
-  M117 Unloading filament...
-  G92 E0.0
-  G91
-  G1 E-48 F5000
-  G1 E-17 F1000
-  G1 E-25 F1000
-  G90
-  G92 E0.0
-  M400
-  M117 Remove Filament Now!
-  M300 S300 P1000
-  M117 Filament unloaded!
-  RESTORE_GCODE_STATE NAME=unload_state
-
-[gcode_macro LOAD_FILAMENT]
-gcode:
-  SAVE_GCODE_STATE NAME=load_state
-  G91
-  # Heat up hotend to provided temp or 220 as default as that should work OK with most filaments.
-  {% if params.TEMP is defined or printer.extruder.can_extrude|lower == 'false' %}
-  M117 Heating...
-  M109 S{params.TEMP|default(220, true)}
-  {% endif %}
-  M117 Loading filament...
-  # Load the filament into the hotend area.
-  G92 E0.0
-  G91
-  G1 E70 F400
-  G1 E45 F100
-  G90
-  G92 E0.0
-  M400
-  M117 Filament loaded!
-  RESTORE_GCODE_STATE NAME=load_state
-
-[gcode_macro CANCEL_PRINT]
-description: Cancel the actual running print
-rename_existing: CANCEL_PRINT_BASE
-variable_park: True
-gcode:
-  ## Move head and retract only if not already in the pause state and park set to true
-  {% if printer.pause_resume.is_paused|lower == 'false' and park|lower == 'true'%}
-    _TOOLHEAD_PARK_PAUSE_CANCEL
-  {% endif %}
-  TURN_OFF_HEATERS
-  CANCEL_PRINT_BASE
-  SDCARD_RESET_FILE
-  # Raise nozzle by 60mm
-  G1 Z60 F3000
-  G90
-  # Disable steppers
-  M84
-  
-[gcode_macro RESET]
-description: Reset to defautl state (soft reset)
-gcode:
-  CANCEL_PRINT
-
-[gcode_macro PAUSE]
-description: Pause the actual running print
-rename_existing: PAUSE_BASE
-gcode:
-  PAUSE_BASE
-  _TOOLHEAD_PARK_PAUSE_CANCEL
-
-[gcode_macro RESUME]
-description: Resume the actual running print
-rename_existing: RESUME_BASE
-gcode:
-  ##### read extrude from  _TOOLHEAD_PARK_PAUSE_CANCEL  macro #####
-  {% set extrude = printer['gcode_macro _TOOLHEAD_PARK_PAUSE_CANCEL'].extrude %}
-  #### get VELOCITY parameter if specified ####
-  {% if 'VELOCITY' in params|upper %}
-    {% set get_params = ('VELOCITY=' + params.VELOCITY)  %}
-  {%else %}
-    {% set get_params = "" %}
-  {% endif %}
-  ##### end of definitions #####
-  {% if printer.extruder.can_extrude|lower == 'true' %}
-    M83
-    G1 E{extrude} F2100
-    {% if printer.gcode_move.absolute_extrude |lower == 'true' %} M82 {% endif %}
-  {% else %}
-    {action_respond_info("Extruder not hot enough")}
-  {% endif %}  
-  RESUME_BASE {get_params}
-
-[gcode_macro _TOOLHEAD_PARK_PAUSE_CANCEL]
-description: Helper: park toolhead used in PAUSE and CANCEL_PRINT
-variable_extrude: 1.0
-gcode:
-  ##### set park positon for x and y #####
-  # default is your max posion from your printer.cfg
-  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
-  {% set y_park = 5.0 %}
-  {% set z_park_delta = 2.0 %}
-  ##### calculate save lift position #####
-  {% set max_z = printer.toolhead.axis_maximum.z|float %}
-  {% set act_z = printer.toolhead.position.z|float %}
-  {% if act_z < (max_z - z_park_delta) %}
-    {% set z_safe = z_park_delta %}
-  {% else %}
-    {% set z_safe = max_z - act_z %}
-  {% endif %}
-  ##### end of definitions #####
-  {% if printer.extruder.can_extrude|lower == 'true' %}
-    M83
-    G1 E-{extrude} F2100
-    {% if printer.gcode_move.absolute_extrude |lower == 'true' %} M82 {% endif %}
-  {% else %}
-    {action_respond_info("Extruder not hot enough")}
-  {% endif %}
-  {% if "xyz" in printer.toolhead.homed_axes %}
-    G91
-    G1 Z{z_safe} F900
-    G90
-    G1 X{x_park} Y{y_park} F6000
-    {% if printer.gcode_move.absolute_coordinates|lower == 'false' %} G91 {% endif %}
-  {% else %}
-    {action_respond_info("Printer not homed")}
-  {% endif %}
-
-# Prusa's calibrate Z
-[gcode_macro Calibrate_Z]
-gcode:
-    G28
-    G1 X125 Y105
-    G1 Z210 F1000 #Update with Z height.
-    FORCE_MOVE STEPPER=stepper_z Distance=10 Velocity=10
-    G28 Z
-
-[delayed_gcode clear_display]
-initial_duration: 0.
-gcode:
-  M117
-
-[gcode_macro END_PRINT]
-gcode:
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # Move nozzle away from print while retracting
-    G91
-    G1 X-2 Y-2 E-5 F300
-    # Raise nozzle by 15mm
-    G1 Z15 F3000
-    G90
-    # Disable steppers
-    M84
-
-# 'Marlin' style M808 compatibility macro for SDCard looping
-[gcode_macro M808]
-gcode:
-    {% if params.K is not defined and params.L is defined %}SDCARD_LOOP_BEGIN COUNT={params.L|int}{% endif %}
-    {% if params.K is not defined and params.L is not defined %}SDCARD_LOOP_END{% endif %}
-    {% if params.K is defined and params.L is not defined %}SDCARD_LOOP_DESIST{% endif %}
-
-
-[force_move]
-enable_force_move: TRUE
-
-#This replicates Prusa's calibrate Z funtionality.
-[gcode_macro Tram_Z]
-gcode:
-    G28
-    G1 X125 Y105
-    G1 Z210 F1000 #Update with Z height.
-    FORCE_MOVE STEPPER=stepper_z Distance=10 Velocity=10
-    G28 Z
-
 [virtual_sdcard]
 path: ~/gcode_files
 
 #If not using with Octoprint remove the menu.
-#[menu __main __octoprint]
-#type: disabled
+[menu __main __octoprint]
+type: disabled
 
+[menu __main __filament __loadf]
+type: command
+name: Load Fil. rychle
+gcode:
+    SAVE_GCODE_STATE NAME=__filament__load
+    M83
+    G1 E90 F900
+    RESTORE_GCODE_STATE NAME=__filament__load
+
+[menu __main __filament __loads]
+type: command
+name: Load Fil. pomalu
+gcode:
+    SAVE_GCODE_STATE NAME=__filament__load
+    M83
+    G1 E70 F240
+    RESTORE_GCODE_STATE NAME=__filament__load
+
+
+[menu __main __filament __unloadf]
+type: command
+name: Unload Fil.rychle
+gcode:
+    SAVE_GCODE_STATE NAME=__filament__load
+    M83
+    G1 E-100 F960
+    RESTORE_GCODE_STATE NAME=__filament__load
+
+
+[menu __main __filament __unloads]
+type: command
+name: Unload Fil.pomalu
+gcode:
+    SAVE_GCODE_STATE NAME=__filament__load
+    M83
+    G1 E-100 F240
+    RESTORE_GCODE_STATE NAME=__filament__load
