--- a/printer.cfg
+++ b/printer.cfg
@@ -1,21 +1,35 @@
+[include kiauh_macros.cfg]
 # This file contains pin mappings and reasonable defaults for Prusa i3 MK3
 #[include fluidd.cfg]
 #[include mainsail.cfg]
 #[include kiauh_macros.cfg]
 #[include display_menu.cfg]
-#[include shell_cmd.cfg]
+[include mesh_magnets.cfg]
 [include webui_macros.cfg]
 [include macros.cfg]
+
+#[mcu rpi]
+#serial: /tmp/klipper_host_mcu
+
+#[adxl345]
+#cs_pin: rpi:None
+
+#[resonance_tester]
+#accel_chip: adxl345
+#probe_points:
+    #100, 100, 20  # an example
 
 [probe]
 pin: PB4
 x_offset: 23
 y_offset: 5
-z_offset: 0.478
-speed: 7
+z_offset: 0.472
+speed: 5
 samples: 3
 samples_result: average
-sample_retract_dist: 2.2
+sample_retract_dist: 0.40
+samples_tolerance: 0.2
+lift_speed: 10
 
 [bed_screws]
 screw1: 13,6
@@ -37,30 +51,21 @@ screw1_name: Back Center
 screw8: 228,210
 screw3_name: Back Right
 
-[bed_mesh]
-speed: 110
-horizontal_move_z: 2.5
-mesh_min: 24, 6
-mesh_max: 228,210
-probe_count: 5,5
-mesh_pps: 3,3
-algorithm: lagrange
-fade_end: 4
 
 #Home in lower, lefthand corner.
 [homing_override]
 gcode:
     M400                  # Wait for moves to finish
     G90                   # Absolute positioning
-    G1 Z10 F7200          # Hop Z-Axis
-    M204 S1000            # Set homing acceleration (important!)
+    G1 Z10 F6200          # Hop Z-Axis
+    M204 S960            # Set homing acceleration (important!)
 
     M117 Homing the toolhead
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT=0.149155 HOLDCURRENT=0.281738
     SET_TMC_CURRENT STEPPER=stepper_y CURRENT=0.182301 HOLDCURRENT=0.3480291
     G28 X0 Y0
     M400
-    G1 X101 Y100 F7200
+    G1 X101 Y100 F7000
     G28 Z0
     M400
     SET_TMC_CURRENT STEPPER=stepper_x CURRENT={printer.configfile.config["tmc2130 stepper_x"].run_current} HOLDCURRENT={printer.configfile.config["tmc2130 stepper_x"].hold_current}
@@ -68,7 +73,7 @@ gcode:
     # Reset LCD
     M117
     # Park
-    G1 X1 Y0 Z80 F7200
+    G1 X1 Y0 Z80 F6000
     # Restore acceleration
     M204 S{printer.configfile.config.printer.max_accel}
 axes: Z
@@ -90,13 +95,13 @@ rotation_distance: 32
 endstop_pin: tmc2130_stepper_x:virtual_endstop
 position_endstop: 0
 position_max: 255
-homing_speed: 50
+homing_speed: 40
 homing_retract_dist: 0
 
 [tmc2130 stepper_x]
 cs_pin: PG0
 #microsteps: 16
-#interpolate: True
+interpolate: True
 run_current: .281738
 hold_current: .281738
 sense_resistor: 0.220
@@ -128,19 +133,19 @@ endstop_pin: tmc2130_stepper_y:virtual_endstop
 position_endstop: -4
 position_max: 212.5
 position_min: -4
-homing_speed: 50
+homing_speed: 40
 homing_retract_dist: 0
 
 [tmc2130 stepper_y]
 cs_pin: PG2
 #microsteps: 16
 interpolate: True
-run_current: .281738
-hold_current: .281738
+#run_current: .281738
+#hold_current: .281738
 #Run at the same current as X-axis for lower noise, and to keep steppers cooler.
 #This should work, but if Y starts skipping steps, you may need to bump up to Prusa stock.
-#run_current: .3480291
-#hold_current: .3480291
+run_current: .33
+hold_current: .33 #.3480291
 sense_resistor: 0.220
 diag1_pin: !PK7
 driver_IHOLDDELAY: 8
@@ -151,8 +156,8 @@ driver_HEND: 1
 driver_HSTRT: 5
 driver_PWM_FREQ: 2
 driver_PWM_GRAD: 2
-#driver_PWM_AMPL: 235
-driver_PWM_AMPL: 230
+driver_PWM_AMPL: 235
+#driver_PWM_AMPL: 230
 driver_PWM_AUTOSCALE: True
 driver_SGT: 3
 
@@ -168,12 +173,12 @@ endstop_pin: probe:z_virtual_endstop
 position_max: 210.4 #This is the MK3S default.
 #position_max: 210 #Use this for a stock MK3 non-S, BMG, or Bear extruders for the MK3S.
 position_min: -3
-homing_speed: 10 #13.333
+homing_speed: 8 #13.333
 
 [tmc2130 stepper_z]
 cs_pin: PK5
 #microsteps: 16
-#interpolate: True
+interpolate: True
 run_current: .53033
 hold_current: .53033
 sense_resistor: 0.220
@@ -206,9 +211,9 @@ filament_diameter: 1.750
 # poorly sliced objects that extrude too much for small moves.
 max_extrude_cross_section: 50.0
 # Allows to load filament and purge up to 500mm
-max_extrude_only_distance: 990.0
-max_extrude_only_velocity: 120.0
-max_extrude_only_accel: 1350.0
+max_extrude_only_distance: 120.0
+max_extrude_only_velocity: 40.0
+max_extrude_only_accel: 3000
 heater_pin: PE5
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: PF0
@@ -216,14 +221,14 @@ sensor_pin: PF0
 #pid_Kp: 16.13
 #pid_Ki: 1.1625
 #pid_Kd: 56.23
-control = pid
-pid_kp = 22.718
-pid_ki = 1.082
-pid_kd = 119.271
+#control = pid
+#pid_kp = 22.718
+#pid_ki = 1.082
+#pid_kd = 119.271
 min_temp: 0
 max_temp: 305
-pressure_advance: 0.048
-pressure_advance_smooth_time: 0.040
+pressure_advance: 0.052
+#pressure_advance_smooth_time: 0.040
 
 [tmc2130 extruder]
 cs_pin: PK4
@@ -246,19 +251,19 @@ driver_PWM_AUTOSCALE: True
 driver_SGT: 3
 
 [firmware_retraction]
-retract_length: 0.8
+retract_length: 1
 retract_speed: 35
 unretract_extra_length: 0
-unretract_speed: 35
+unretract_speed: 30
 
 [heater_bed]
 heater_pin: PG5
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PF2
-control: pid
-pid_Kp: 126.13
-pid_Ki: 4.3
-pid_Kd: 924.76
+#control: pid
+#pid_Kp: 126.13
+#pid_Ki: 4.3
+#pid_Kd: 924.76
 min_temp: 0
 max_temp: 125
 
@@ -277,6 +282,7 @@ pin: PH3
 #serial: /dev/serial0  # If you are using internal RPI serial port
 serial: /dev/ttyAMA0
 restart_method: command
+baud: 500000
 #serial: /dev/ttyS0
 
 [display]
@@ -295,18 +301,27 @@ default_type: command
 
 [printer]
 kinematics: cartesian
-max_velocity: 250
-max_accel: 1250
-max_accel_to_decel: 1250
-max_z_velocity: 12
-max_z_accel: 240
-square_corner_velocity: 1.5
+max_velocity: 220
+max_accel: 1200
+max_accel_to_decel: 1200
+max_z_velocity: 14
+max_z_accel: 220
+square_corner_velocity: 2
 ## For faster printing enable
 # [printer]
 # max_accel: 2000
 # max_accel_to_decel: 2000
 # max_z_velocity: 20
 # max_z_accel: 300
+
+[input_shaper]
+#shaper_freq_x: 41.32
+#shaper_freq_y: 43.79
+#shaper_type: mzv #ei
+shaper_freq_x: 77.0
+shaper_type_x: 2hump_ei
+shaper_freq_y: 68.0
+shaper_type_y: ei
 
 [gcode_arcs]
 resolution: 0.25
@@ -317,21 +332,23 @@ min_temp: 10
 max_temp: 80
 
 #MK3S Filament IR Barrier Sensor.
-[filament_switch_sensor pat9125]
-pause_on_runout: True
-runout_gcode:
-    M118 Filament Runout Detected
-    M600
-insert_gcode:
-    M118 Filament Load Detected
-    LOAD_FILAMENT
-event_delay: 3.0
-pause_delay: 0.01
-switch_pin: PK0
-#MK3 (non-S) Filament Sensor.
+#[filament_switch_sensor pat9125]
 #[pat9125 fsensor]
 #invert_axis: True
 #oq_enable: True
+#pause_on_runout: True
+#runout_gcode:
+#    M118 Filament Runout Detected
+#    M300
+#insert_gcode:
+#    M118 Filament Load Detected
+#    M300
+#    LOAD_FILAMENT
+#event_delay: 3.0
+#pause_delay: 0.01
+#switch_pin: !PK0
+#MK3 (non-S) Filament Sensor.
+#[pat9125 fsensor]
 
 [respond]
 default_type: command
@@ -365,7 +382,8 @@ name: Load Fil. rychle
 gcode:
     SAVE_GCODE_STATE NAME=__filament__load
     M83
-    G1 E90 F900
+    G1 E80 F900
+    G1 E30 F340
     RESTORE_GCODE_STATE NAME=__filament__load
 
 [menu __main __filament __loads]
@@ -374,7 +392,7 @@ name: Load Fil. pomalu
 gcode:
     SAVE_GCODE_STATE NAME=__filament__load
     M83
-    G1 E70 F240
+    G1 E60 F250
     RESTORE_GCODE_STATE NAME=__filament__load
 
 
@@ -396,3 +414,18 @@ gcode:
     M83
     G1 E-100 F240
     RESTORE_GCODE_STATE NAME=__filament__load
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 57.315
+#*# pid_ki = 0.887
+#*# pid_kd = 926.353
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 22.336
+#*# pid_ki = 1.154
+#*# pid_kd = 108.051
