--- a/Macros.cfg
+++ b/Macros.cfg
@@ -13,37 +13,11 @@ gcode:
 [gcode_macro G81]
 gcode:
  BED_MESH_OUTPUT
-   
-
 
 [gcode_macro STEPPERS_OFF]
 gcode:
     M84
-############################
-### FILAMENT LOAD/UNLOAD ###
-############################
-### WIP!!!!!!!!
-[gcode_macro load_pla]
-gcode:
-    {% set extruder_temp = 220 %}
-    {% set extrusion_amount = 160 %}
-    G90
-    G28 X Y
-    M109 S{ extruder_temp }
-    M83
-    G1 E{ extrusion_amount } F300
-    G92 E0
 
-[gcode_macro unload_pla]
-gcode:
-    {% set extruder_temp = 220 %}
-    {% set retract_amount = 160 %}
-    G28 X Y
-    M109 S{ extruder_temp }
-    M83
-    G0 E10 F300
-    G0 E-{ retract_amount } F3000
-    G92 E0
 ######################################################################
 # Beeper
 ######################################################################
@@ -71,6 +45,8 @@ gcode:
 [gcode_macro M600]
 gcode:
   PAUSE
+  G91
+  G1 Z25 F2000
   UNLOAD_FILAMENT
   M117 Please load new filament and resume
   
@@ -82,15 +58,15 @@ gcode:
   {% if params.TEMP is defined or printer.extruder.can_extrude|lower == 'false' %}
     M117 Heating...
     # Heat up hotend to provided temp or 220 as default as that should work OK with most filaments.
-    M109 S{params.TEMP|default(220, true)}
+    M109 S{params.TEMP|default(222, true)}
   {% endif %}
   M117 Unloading filament...
   M300
   G92 E0.0
   G91
-  G1 E-50 F5000
+  G1 E-70 F4000
   G1 E-17 F1000
-  G1 E-25 F1000
+  G1 E-20 F500
   G90
   G92 E0.0
   M400
@@ -114,12 +90,13 @@ gcode:
   # Load the filament into the hotend area.
   G92 E0.0
   G91
-  G1 E70 F400
+  G1 E80 F500
   G1 E50 F100
   G90
   G92 E0.0
   M400
   M117 Filament loaded!
+  M300
   RESTORE_GCODE_STATE NAME=load_state
   UPDATE_DELAYED_GCODE ID=clear_display DURATION=5
 
@@ -211,15 +188,6 @@ gcode:
     {action_respond_info("Printer not homed")}
   {% endif %}
 
-# Prusa's calibrate Z
-[gcode_macro Calibrate_Z]
-gcode:
-    G28
-    G1 X125 Y105
-    G1 Z210 F1000 #Update with Z height.
-    FORCE_MOVE STEPPER=stepper_z Distance=10 Velocity=10
-    G28 Z
-
 [delayed_gcode clear_display]
 initial_duration: 0.
 gcode:
@@ -227,13 +195,14 @@ gcode:
 
 [gcode_macro END_PRINT]
 gcode:
+    G10
     # Turn off bed, extruder, and fan
     M140 S0
     M104 S0
     M106 S0
     # Move nozzle away from print while retracting
     G91
-    G1 X-2 Y-2 E-5 F300
+    G1 X-2 Y-2 E-7 F330
     # Raise nozzle by 15mm
     G1 Z15 F3000
     G90
@@ -259,6 +228,7 @@ gcode:
     G1 Z210 F1000 #Update with Z height.
     FORCE_MOVE STEPPER=stepper_z Distance=10 Velocity=10
     G28 Z
+    
 [gcode_macro slow_fan]
 gcode:
   M106 S{ printer.fan.speed * 0.9 * 255}
@@ -275,4 +245,43 @@ gcode:
     {% endfor %}
   {% endfor %}
   RESTORE_GCODE_STATE NAME=clean_nozzle_state
-  
+
+[gcode_macro M204]
+description: Helper: Set acceleration
+rename_existing: M204.1
+gcode:
+    {% set S = params.S|default(1000)|int %}
+    {% set P = params.P|default(1000)|int %}
+    {% set T = params.T|default(800)|int %}
+    {% set factor = params.F|default(0.75)|float %}
+    {% if 'S' in params %}
+        SET_VELOCITY_LIMIT ACCEL={S} ACCEL_TO_DECEL={ S|float * factor }
+    {% else %}
+        {% if 'P' in params %}
+            {% if 'T' in params %}
+                {% if P|int < T|int %}
+                    SET_VELOCITY_LIMIT ACCEL={P} ACCEL_TO_DECEL={ P|float * factor }
+                {% else %}
+                    SET_VELOCITY_LIMIT ACCEL={T} ACCEL_TO_DECEL={ T|float * factor }
+                {% endif %}
+            {% else %}
+                SET_VELOCITY_LIMIT ACCEL={P} ACCEL_TO_DECEL={ P|float * factor }
+            {% endif %}
+        {% elif 'T' in params %}
+            SET_VELOCITY_LIMIT ACCEL={T} ACCEL_TO_DECEL={ T|float * factor }
+        {% endif %}
+    {% endif %}
+
+[gcode_macro M207]
+description: Helper: Set FwRetraction
+gcode:
+    {% set length = params.S|default(0.5)|float %}
+    {% set speed = params.F|default(25)|float %}
+    SET_RETRACTION RETRACT_LENGTH={length} RETRACT_SPEED={speed}
+
+#[gcode_macro M900]
+#description: Helper: Set Pressure advance
+#gcode:
+#    {% if 'K' in params %}
+#        SET_PRESSURE_ADVANCE ADVANCE={ params.K|float }
+#    {% endif %} 
