--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,4 @@
+[include shell_command.cfg]
 [include kiauh_macros.cfg]
 # This file contains pin mappings and reasonable defaults for Prusa i3 MK3
 #[include fluidd.cfg]
@@ -26,10 +27,12 @@ y_offset: 5
 z_offset: 0.472
 speed: 5
 samples: 3
-samples_result: average
-sample_retract_dist: 0.40
-samples_tolerance: 0.2
-lift_speed: 10
+samples_result: median
+sample_retract_dist: 3.40
+samples_tolerance: 0.9
+#samples_tolerance: 0.06
+samples_tolerance_retries: 5
+lift_speed: 5
 
 [bed_screws]
 screw1: 13,6
@@ -95,15 +98,15 @@ rotation_distance: 32
 endstop_pin: tmc2130_stepper_x:virtual_endstop
 position_endstop: 0
 position_max: 255
-homing_speed: 40
+homing_speed: 35
 homing_retract_dist: 0
 
 [tmc2130 stepper_x]
 cs_pin: PG0
 #microsteps: 16
 interpolate: True
-run_current: .281738
-hold_current: .281738
+run_current: .33  #.281738
+hold_current: .34 #.281738
 sense_resistor: 0.220
 diag1_pin: !PK2
 driver_IHOLDDELAY: 8
@@ -133,7 +136,7 @@ endstop_pin: tmc2130_stepper_y:virtual_endstop
 position_endstop: -4
 position_max: 212.5
 position_min: -4
-homing_speed: 40
+homing_speed: 35
 homing_retract_dist: 0
 
 [tmc2130 stepper_y]
@@ -145,7 +148,7 @@ interpolate: True
 #Run at the same current as X-axis for lower noise, and to keep steppers cooler.
 #This should work, but if Y starts skipping steps, you may need to bump up to Prusa stock.
 run_current: .33
-hold_current: .33 #.3480291
+hold_current: .34 #.3480291
 sense_resistor: 0.220
 diag1_pin: !PK7
 driver_IHOLDDELAY: 8
@@ -170,10 +173,10 @@ rotation_distance: 8
 #step_distance: .0025
 endstop_pin: probe:z_virtual_endstop
 #Please update the Z height in the Tram_Z macro below.
-position_max: 210.4 #This is the MK3S default.
+position_max: 211.4 #This is the MK3S default.
 #position_max: 210 #Use this for a stock MK3 non-S, BMG, or Bear extruders for the MK3S.
 position_min: -3
-homing_speed: 8 #13.333
+homing_speed: 5 #13.333
 
 [tmc2130 stepper_z]
 cs_pin: PK5
@@ -286,6 +289,8 @@ baud: 500000
 #serial: /dev/ttyS0
 
 [display]
+hd44780_protocol_init: True
+line_length: 20
 lcd_type: hd44780
 rs_pin: PD5
 e_pin: PF7
@@ -295,6 +300,7 @@ d6_pin: PH7
 d7_pin: PG3
 encoder_pins: ^PJ1,^PJ2
 click_pin: ^!PH6
+menu_timeout: 80
 
 [respond]
 default_type: command
@@ -315,16 +321,16 @@ square_corner_velocity: 2
 # max_z_accel: 300
 
 [input_shaper]
-#shaper_freq_x: 41.32
-#shaper_freq_y: 43.79
-#shaper_type: mzv #ei
-shaper_freq_x: 77.0
-shaper_type_x: 2hump_ei
-shaper_freq_y: 68.0
-shaper_type_y: ei
+shaper_freq_x: 41.32
+shaper_freq_y: 43.79
+shaper_type: zvd #ei
+#shaper_freq_x: 77.0
+#shaper_type_x: 2hump_ei
+#shaper_freq_y: 68.0
+#shaper_type_y: ei
 
 [gcode_arcs]
-resolution: 0.25
+resolution: 0.05
 
 [temperature_sensor raspberry_pi]
 sensor_type: temperature_host
@@ -371,6 +377,9 @@ scale: 1000
 
 [virtual_sdcard]
 path: ~/gcode_files
+
+[idle_timeout]
+timeout: 6000
 
 #If not using with Octoprint remove the menu.
 [menu __main __octoprint]
@@ -429,3 +438,24 @@ gcode:
 #*# pid_kp = 22.336
 #*# pid_ki = 1.154
 #*# pid_kd = 108.051
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.055000, -0.100000, -0.092500, -0.072500, -0.095000, -0.092500, -0.065000
+#*# 	  -0.027500, -0.067500, -0.072500, -0.072500, -0.057500, -0.027500, -0.020000
+#*# 	  -0.032500, -0.040000, -0.022500, -0.039375, -0.032500, -0.050000, -0.080000
+#*# 	  -0.002500, -0.040000, -0.020000, 0.000000, -0.039375, -0.062500, -0.072500
+#*# 	  0.040000, 0.010000, 0.005000, 0.030000, -0.010000, -0.065000, -0.090000
+#*# 	  0.097500, 0.065000, 0.042500, 0.057500, 0.047500, -0.030000, -0.075000
+#*# 	  0.140000, 0.127500, 0.092500, 0.140000, 0.105000, 0.060000, 0.005000
+#*# tension = 0.2
+#*# min_x = 24.0
+#*# algo = bicubic
+#*# y_count = 7
+#*# mesh_y_pps = 2
+#*# min_y = 1.0
+#*# x_count = 7
+#*# max_y = 211.96
+#*# mesh_x_pps = 2
+#*# max_x = 231.0
