--- a/Macros.cfg
+++ b/Macros.cfg
@@ -225,7 +225,7 @@ enable_force_move: TRUE
 gcode:
     G28
     G1 X125 Y105
-    G1 Z210 F1000 #Update with Z height.
+    G1 Z210.4 F1000 #Update with Z height.
     FORCE_MOVE STEPPER=stepper_z Distance=10 Velocity=10
     G28 Z
     
@@ -279,9 +279,23 @@ gcode:
     {% set speed = params.F|default(25)|float %}
     SET_RETRACTION RETRACT_LENGTH={length} RETRACT_SPEED={speed}
 
+# ================================================================================
+# GCode Macro M141
+# M141 for Chamber temperature change
+# ================================================================================
+[gcode_macro M141]
+description: Helper: Chamber temp. change
+gcode:
+    {% set S = params.S|default(0)|float %}
+    {% set P = params.P|default(0)|float %}
+    SET_TEMPERATURE_FAN_TARGET temperature_fan="chamber" target={S}
+
 #[gcode_macro M900]
 #description: Helper: Set Pressure advance
 #gcode:
 #    {% if 'K' in params %}
 #        SET_PRESSURE_ADVANCE ADVANCE={ params.K|float }
 #    {% endif %} 
+
+
+
