--- a/Geeetech A10M.cfg
+++ b/Geeetech A10M.cfg
@@ -1,28 +1,98 @@
-# This file contains common pin mappings for the Geeetech A10M modified 
+# This file contains common pin mappings for the Geeetech A10M hevy modified with Ender 3 direc drive extruder and TMC steppers XYZ
 # GT2560 v3 board uses a firmware compiled for the AVR
 # atmega2560.
 [include shell_command.cfg]
 [include kiauh_macros.cfg]
+[include macros.cfg]
 
 [virtual_sdcard]
 path: ~/gcode_files
 
 [save_variables]
 filename:  ~/variables.cfg
-#   Required - provide a filename that would be used to save the
-#   variables to disk e.g. ~/variables.cfg
+
 [mcu]
 serial: /dev/serial/by-id/usb-1a86_USB2.0-Serial-if00-port0
-baud: 250000
+baud: 500000
+
+#[mcu rpi]
+#serial: /tmp/klipper_host_mcu
+
+#[adxl345]
+#cs_pin: rpi:None
+
+#[resonance_tester]
+#accel_chip: adxl345
+#probe_points:
+#    100, 100, 20  # an example
 
 [printer]
 kinematics: cartesian
-max_velocity: 220
+max_velocity: 200
 max_accel: 1000
-max_accel_to_decel: 1100
+max_accel_to_decel: 1000
 max_z_velocity: 8
-max_z_accel: 110
-square_corner_velocity: 2.0
+max_z_accel: 100
+square_corner_velocity: 1.0
+
+[input_shaper]
+shaper_freq_x: 39.53 # frequency for the X mark of the test model
+shaper_freq_y: 44.64  # frequency for the Y mark of the test model
+shaper_type: ei
+
+[bltouch]
+sensor_pin: ^PC7
+control_pin: PB5
+#pin_move_time: 0.680
+#pin_up_reports_not_triggered: False
+#pin_up_touch_mode_reports_triggered: False
+#probe_with_touch_mode: True
+stow_on_each_sample: False
+x_offset: -43.5
+y_offset: 10
+z_offset: 2.53
+speed: 8
+lift_speed: 40
+samples: 3
+sample_retract_dist: 7
+#samples_tolerance: 0.3
+samples_tolerance_retries: 3
+
+[bed_mesh]
+speed: 60
+horizontal_move_z: 7
+mesh_min: 29,12
+mesh_max: 198, 200
+probe_count: 6,6
+
+[bed_screws]
+screw1: 29,22
+screw1_name: front left screw
+screw2: 198,22
+screw2_name: front right screw
+screw3: 198,190
+screw3_name: rear right screw
+screw4: 29,190
+screw4_name: rear left screw
+
+[screws_tilt_adjust]
+screw1: 72, 30
+screw1_name: front left screw
+screw2: 241, 30
+screw2_name: front right screw
+screw3: 241, 198
+screw3_name: rear right screw
+screw4: 72, 198
+screw4_name: rear left screw
+horizontal_move_z: 10
+speed: 60
+screw_thread: CW-M3
+
+[safe_z_home]
+home_xy_position: 157,115
+speed: 50
+z_hop: 8
+z_hop_speed: 6
 
 [stepper_x]
 step_pin: PC0
@@ -31,10 +101,10 @@ enable_pin: !PC2
 microsteps: 16
 rotation_distance: 39.85
 endstop_pin: ^!PA2
-position_min: -10
-position_endstop: -10
-position_max: 230
-homing_speed: 80
+position_min: -1
+position_endstop: 0
+position_max: 243
+homing_speed: 60
 second_homing_speed: 30
 homing_retract_dist: 5
 
@@ -45,10 +115,10 @@ enable_pin: !PA7
 microsteps: 16
 rotation_distance: 39.85
 endstop_pin: ^!PA6
-position_min: -5
-position_endstop: -5
-position_max: 223
-homing_speed: 70
+position_min: -1
+position_endstop: 0
+position_max: 237
+homing_speed: 60
 second_homing_speed: 30
 homing_retract_dist: 5
 
@@ -60,8 +130,8 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_max: 240
-position_min: -5
-homing_speed: 8
+position_min: -3
+homing_speed: 10
 second_homing_speed: 4
 homing_retract_dist: 4
 
@@ -70,42 +140,44 @@ step_pin: PL3
 dir_pin: !PL5
 enable_pin: !PB6
 microsteps: 16
-#rotation_distance: 34.4
-rotation_distance: 7.25
-nozzle_diameter: 0.6
-filament_diameter: 1.63
+rotation_distance: 33.683 #34.406PRO
+#rotation_distance: 7.25
+nozzle_diameter: 0.400
+filament_diameter: 1.750
 heater_pin: PB4
 sensor_type: EPCOS 100K B57560G104F
 #sensor_type: ATC Semitec 104GT-2
 sensor_pin: PK3
 #pullup_resistor: 4700
 min_temp: 0
-max_temp: 275
-min_extrude_temp: 160
-max_extrude_only_distance: 700
+max_temp: 265
+min_extrude_temp: 175
+max_extrude_only_distance: 100
+#max_extrude_only_velocity: 30
+max_extrude_only_accel: 500
 control: pid
-pid_Kp: 29.667
-pid_Ki: 2.355
-pid_Kd: 93.451
-pressure_advance: 0.42
-pressure_advance_smooth_time: 0.080
+pid_kp = 21.478
+pid_ki = 1.053
+pid_kd = 109.537
+pressure_advance: 0.22
+#pressure_advance_smooth_time: 0.040
 max_extrude_cross_section: 50
 
-[extruder1]
-step_pin: PL0   
-dir_pin: !PL2
-enable_pin: !PL1
-microsteps: 16
-rotation_distance: 7.25
+#[extruder1]
+#step_pin: PL0   
+#dir_pin: !PL2
+#enable_pin: !PL1
+#microsteps: 16
+#rotation_distance: 7.25
 #step_distance: .002304147
-nozzle_diameter: 0.6
-filament_diameter: 1.750
-max_extrude_only_distance: 700
-pressure_advance: 0.42
-pressure_advance_smooth_time: 0.080
+#nozzle_diameter: 0.6
+#filament_diameter: 1.750
+#max_extrude_only_distance: 700
+#pressure_advance: 0.42
+#pressure_advance_smooth_time: 0.080
 #pressure_advance_lookahead_time: 0.020
-shared_heater: extruder
-max_extrude_cross_section: 50
+#shared_heater: extruder
+#max_extrude_cross_section: 50
 
 [heater_bed]
 heater_pin: PG5
@@ -114,46 +186,9 @@ sensor_pin: PK2
 min_temp: 0
 max_temp: 120
 control: pid
-pid_Kp: 73.964
-pid_Ki: 2.315
-pid_Kd: 590.784
-
-[bltouch]
-sensor_pin: ^PC7
-control_pin: PB5
-pin_move_time: 0.680
-pin_up_reports_not_triggered: False
-pin_up_touch_mode_reports_triggered: False
-probe_with_touch_mode: False
-stow_on_each_sample: True
-x_offset: -44
-y_offset: -3
-z_offset: 1.27
-speed: 2
-#lift_speed: 1.0
-samples: 2
-sample_retract_dist: 7
-samples_tolerance: 0.4
-samples_tolerance_retries: 2
-
-[bed_mesh]
-speed: 35
-horizontal_move_z: 7
-mesh_min: 44,20
-mesh_max: 183, 200
-probe_count: 5,5
-
-[bed_screws]
-screw1: 30,32
-screw2: 199,32
-screw3: 199,200
-screw4: 30,200
-
-[safe_z_home]
-home_xy_position: 159,119
-speed: 50
-z_hop: 8
-z_hop_speed: 5
+pid_kp = 67.249
+pid_ki = 3.898
+pid_kd = 290.012
 
 [fan]
 pin: PH6
@@ -162,6 +197,8 @@ kick_start_time: 0.300
 
 #Original Geeetech A10M Display
 [display]
+hd44780_protocol_init: True
+line_length: 20
 lcd_type: hd44780
 rs_pin: PD1
 e_pin: PH0
@@ -185,212 +222,36 @@ enable_force_move: True
 default_type: command
 
 [firmware_retraction]
-retract_length: 7
+retract_length: 1.4
 #   The length of filament (in mm) to retract when G10 is activated,
 #   and to unretract when G11 is activated (but see
 #   unretract_extra_length below). The default is 0 mm.
-retract_speed: 35
+retract_speed:25
 #   The speed of retraction, in mm/s. The default is 20 mm/s.
 unretract_extra_length: 0
 #   The length (in mm) of *additional* filament to add when
 #   unretracting.
-unretract_speed: 30
+unretract_speed: 18
 #   The speed of unretraction, in mm/s. The default is 10 mm/s.
 
 [gcode_arcs]
 resolution: 0.25
 
-[gcode_macro T1]
-description: Select extruder 1
+[idle_timeout]
 gcode:
-  ACTIVATE_EXTRUDER extruder=extruder1
-  SAVE_VARIABLE VARIABLE=currentextruder VALUE='"extruder1"'
-
-[gcode_macro T0]
-description: Select extruder 2
-gcode:
-  ACTIVATE_EXTRUDER extruder=extruder
-  SAVE_VARIABLE VARIABLE=currentextruder VALUE='"extruder"'
-
-[gcode_macro START_GCODE]
-gcode:
-  {% set svv = printer.save_variables.variables %}
-  ACTIVATE_EXTRUDER extruder={svv.currentextruder}
-
-[gcode_macro M0]
-gcode:
-    {% set X = params.X|default(-8)|float %}
-    {% set Y = params.Y|default(205)|float %}
-    {% set Z = params.Z|default(10)|float %}
-    SAVE_GCODE_STATE NAME=M0_state
-    PAUSE
-    G91
-    G1 E-7 F3000
-    G1 Z{Z}
-    G90
-    G1 X{X} Y{Y} F3000
-    G91
-    G1 E50 F1000
-    RESTORE_GCODE_STATE NAME=M0_state
-    
-[gcode_macro START_PRINT]
-description: Start printing
-gcode:
-    {% set EXTRUDER = params.EXTRUDER|default(205)|float %}
-    {% set BED = params.BED|default(55)|float %}
-    #{% set CHAMBER = params.CHAMBER|default(30)|float %}
-    BLTOUCH_DEBUG COMMAND=reset
-    G90 # use absolute coordinates
-    M83 # extruder relative mode
-    M104 S160 # temporary
-    M140 S{BED} # set final bed temp
-    M109 S160 # wait temporary nozzle temp to prevent oozing during homing and auto bed leveling
-    M190 S{BED} # wait for bed temp to stabilize
-    G28 # Home all axes    
-    BED_MESH_PROFILE LOAD=default 
-    G1 Z50 F240
-    G1 X-9 Y150 F3000  
-    M106 S150 ;cool
-    M109 S{EXTRUDER} # wait for nozzle temp to stabilize 
-    G1 X3 Y150 F5000
-    G1 X-9 Y150 F5000
-    G1 Z0.3 F1800  
-    M106 S0 ;off cool
-    G92 E0 # Reset Extruder
-    
-    G1 E8 F2000 ; AntiRetract
-    G1 X2 Y5 Z0.25 F2000 # Move to start position
-    G4 P250 #wait 0.25s
-    G1 X200 Y5 Z0.35 F800 E40 #; Draw the first line
-    G1 X200 Y5.8 Z0.35 F2000  #;  line
-    G1 X20 Y5.8 Z0.28 F900 E30 #; Draw the sec line
-    G92 E0 # Reset Extruder
-    G1 E-1 F500 ; Retract filiment by 1 mm
-    G1 Z0.33 F2000 # Move Z Axis up little to prevent scratching of Heat Bed
-    M221 S95
-
-# ================================================================================
-# GCode Macro: END_PRINT
-# Add END_PRINT in your slicers ending script
-# ================================================================================
-[gcode_macro END_PRINT]
-description: Stop printing
-gcode =
-    G10 ; retract
-    G10 ; retract
-    G91 ; Relative Positioning
-    G1 Z+20 ; Move Z up so it doesn't hit anything
-    M106 S255 ;cool
-    G1 E-4 F3200 ; Retract-4
-    G1 E-8 F1200 ; Retract-8
-    G90 ; Absolute Positioning
-    G1 X-9.7 Y205 F4000 ; Move to front
-    G4
-    G1 X4 Y205 F2000 ; Move back 
-    G4
-    G1 X-8.5 Y205 F3000 ; Move to front
-    M104 S0 ; Turn off Extrude (set it to 0)
-    M140 S0 ; Turn off Bed (set it to 0)
-    M84 ; Disable steppers
-    G4 P7000 ;wait 7s
-    M106 S0 ; turn off cooling fan
-# ================================================================================
-[gcode_macro G29]
-gcode:
-  {% set t = params.T|default(0)|float %}
-  {% if printer.idle_timeout.state == "Printing" %}
-    {action_respond_info("This command cannot be used while printing")}
-  {% elif printer.toolhead.homed_axes != "xyz" %}
-    {action_respond_info("Please home XYZ first")}
-  {% else %}
-    BLTOUCH_DEBUG COMMAND=reset
-    SAVE_GCODE_STATE NAME=G29_state
-    G90
-    G1 Z10 F240
-    {% if t > 30.0 %}
-      M190 S{t}
-    {% endif %}
-    BED_MESH_CALIBRATE
-    {% if 'S' in params %}
-      M140 S{params.S}
-    {% endif %}
-    G90
-    G1 Z15 F240
-    G1 X115 Y115 F6000
-    RESTORE_GCODE_STATE NAME=G29_state MOVE=0
-  {% endif %}
-
-[output_pin BEEPER_pin]
-pin: PD3
-pwm: True
-value: 0
-shutdown_value: 0
-cycle_time: 0.001
-scale: 1000
-
-# M300 : Play tone, Beeper support, as commonly found on usual LCD displays
-# Usage: M300 [P<ms>] [S<Hz>]      P is the tone duration, S the tone frequency.
-[gcode_macro M300]
-gcode:
-# Use a default 1kHz tone if S is omitted.
-    {% set S = params.S|default(1000)|int %}
-    # Use a 10ms duration is P is omitted.
-    {% set P = params.P|default(100)|int %}
-    SET_PIN PIN=BEEPER_pin VALUE=0.5 CYCLE_TIME={ 1.0/S if S > 0 else 1 }
-    G4 P{P}
-    SET_PIN PIN=BEEPER_pin VALUE=0
-
-[delayed_gcode clear_display]
-initial_duration: 0.
-gcode:
-    M117
-
-[gcode_macro M701]
-gcode:
-    LOAD_FILAMENT
-
-[gcode_macro M702]
-gcode:
-    UNLOAD_FILAMENT
-
-[gcode_macro M125]
-gcode:
-    PARK
-
-[gcode_macro M205]
-gcode:
-    {% if 'X' in params %}
-        SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={X}
-    {% endif %}
-# 'Marlin' style M808 compatibility macro for SDCard looping
-[gcode_macro M808]
-gcode:
-    {% if params.K is not defined and params.L is defined %}SDCARD_LOOP_BEGIN COUNT={params.L|int}{% endif %}
-    {% if params.K is not defined and params.L is not defined %}SDCARD_LOOP_END{% endif %}
-    {% if params.K is defined and params.L is not defined %}SDCARD_LOOP_DESIST{% endif %}
-
-[gcode_macro G80]
-gcode:
-# G28 #Avoid double homing if using PrusaSlicer or other default gcode.
- BED_MESH_CALIBRATE
- G1 X0 Y0 Z0.4 F4000
- M117
- M400
-
-[gcode_macro G81]
-gcode:
- BED_MESH_OUTPUT
-
-[delayed_gcode clear_display]
-initial_duration: 0.
-gcode:
-  M117
-
-[pause_resume]
+    M300
+    TURN_OFF_HEATERS
+    STATUS
+#   A list of G-Code commands to execute on an idle timeout. See
+#   docs/Command_Templates.md for G-Code format. The default is to run
+#   "TURN_OFF_HEATERS" and "M84".
+timeout: 6000
+#   Idle time (in seconds) to wait before running the above G-Code
+#   commands. The default is 600 seconds.
 
 #If not using with Octoprint remove the menu.
-#[menu __main __octoprint]
-#type: disabled
+[menu __main __octoprint]
+type: disabled
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -398,18 +259,19 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.157500, -0.076250, -0.111250, -0.171250, -0.218750
-#*# 	  -0.220000, -0.095000, -0.016250, 0.056250, -0.066250
-#*# 	  -0.207500, 0.005000, -0.015000, -0.050000, -0.142500
-#*# 	  -0.118750, -0.021250, 0.078750, 0.095000, 0.013750
-#*# 	  -0.026250, 0.108750, 0.107500, 0.042500, 0.082500
+#*# 	  0.281667, 0.278333, 0.247500, 0.241667, 0.249167, 0.170000
+#*# 	  0.126667, 0.126667, 0.149167, 0.165833, 0.205000, 0.127500
+#*# 	  -0.006667, 0.037500, 0.096667, 0.148333, 0.215833, 0.186667
+#*# 	  0.003333, 0.007500, 0.060000, 0.115833, 0.175833, 0.118333
+#*# 	  0.076667, 0.058333, 0.078333, 0.107500, 0.140000, 0.075000
+#*# 	  0.127500, 0.129167, 0.160833, 0.207500, 0.259167, 0.194167
 #*# tension = 0.2
-#*# min_x = 44.0
+#*# min_x = 29.01
 #*# algo = lagrange
-#*# y_count = 5
+#*# y_count = 6
 #*# mesh_y_pps = 2
-#*# min_y = 20.0
-#*# x_count = 5
-#*# max_y = 200.0
+#*# min_y = 12.0
+#*# x_count = 6
+#*# max_y = 200.01
 #*# mesh_x_pps = 2
-#*# max_x = 182.99
+#*# max_x = 197.94
